Fix or suppress warnings.